--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -3,9 +3,9 @@ on: [pull_request, push]
 
 jobs:
   commitlint:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, cdorunner-4p-kernel-small]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - uses: wagoid/commitlint-github-action@v4
